# perfsan

./: .gitignore  CMakeLists.txt  Dockerfile  build.sh
include/: PerfASTExtraChecks.h  PerfASTVisitor.h  PerfAutoFix.h  PerfHint.h  PerfIRPass.h
lib/: PerfAutoFix.cpp  PerfHint.cpp  Plugin.cpp
lib/AST/: PerfASTExtraChecks.cpp  PerfASTVisitor.cpp  PerfFixItEmitter.cpp  PerfFixItEmitter.h
lib/IR/: PerfIRHints_new.txt  PerfIRPass.cpp
test/: all_hints_bad.cpp  all_hints_fixed.cpp  basic_hints.cpp  compare_codegen.sh  test_all_categories.cpp  test_autofix_roundtrip.sh  test_each_mode.sh  test_semantics.sh
tools/: demo.cpp  perfsan
